--- a/hello-world.html
+++ b/hello-world.html
@@ -1,3 +1,7 @@
 <h1>Hello, world!</h1>
 <p>I salute you</p>>
 <p>welcome to my website</p>
+h1>HTML Lesson</h1>
+<h2>For Moringa School</h2>
+
+<p>The goal for this lesson is to illustrate how simple HTML is to read and write by showing some text written in HTML and what it looks like when it is displayed in a web browser.</p>
